--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   role_name: flexget_daemon
   author: Dennis Israelsson
-  description: Installs flexget on your server
+  description: Installs flexget on your Ubuntu server
 
   license: MIT
 
