fix trakt movie crossmatch

--- a/files/flexget_config.yml
+++ b/files/flexget_config.yml
@@ -95,6 +95,7 @@ templates:
       fields:
         - movie_name
         - movie_year
+      all_fields: yes
       action: accept
     quality: "{? trakt.movie.quality ?}"
     qbittorrent: yes
