--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,18 +63,24 @@
     dest: ~/.flexget/trackers/TorrentLeech.tracker
     force: no
 
-- name: schedule flexget daemon to autostart via cron
-  ansible.builtin.cron:
-    name: flexget
-    job: "{{ flexget_path }}/bin/flexget daemon start -d"
-    special_time: reboot
-    state: present
+- name: create flexget service file
+  ansible.builtin.template:
+    src: flexget.service.j2
+    dest: /etc/systemd/system/flexget.service
+    owner: root
+    group: root
+    mode: 0600
+  become: yes
+  notify: reload systemd daemon
 
-- name: start flexget daemon
-  ansible.builtin.command:
-    cmd: "{{ flexget_path }}/bin/flexget daemon start -d"
-  register: result
-  changed_when: "'Daemon already running' not in result.stdout"
+- meta: flush_handlers
+
+- name: enable flexget service
+  ansible.builtin.systemd:
+    name: flexget
+    enabled: yes
+    state: started
+  become: yes
 
 - name: get flexget API token
   ansible.builtin.command:
